--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
+    "d3": "^7.4.4",
+    "data-forge": "^1.9.5",
+    "data-forge-fs": "^0.0.9",
     "express": "^4.18.1"
   }
 }
