--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "homepage": "https://github.com/Benjamin144/feature-scope#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.10",
     "d3": "^7.4.4",
     "data-forge": "^1.9.5",
     "data-forge-fs": "^0.0.9",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
+    "mongoose": "^6.3.3",
+    "morgan": "^1.10.0",
+    "request": "^2.88.2"
   }
 }
