--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "data-forge-fs": "^0.0.9",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "mongod": "^2.0.0",
+    "mongodb-connection-string-url": "^2.5.2",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "request": "^2.88.2"
